# child-care-matchmaker

./: .env.example  .gitignore  CLAUDE.md  COMPLETE_INTEGRATION_SUMMARY.md  Dockerfile  GRAPH_DB_INTEGRATION_README.md  README.md  debug_test.py  debug_validation.py  docker-compose.yml  env.example  fix_time_format.py  generate_expected_outputs.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
docs/: TIME_FORMAT_FEATURE.md
docs/api/: parameters.md  streaming-api.md
docs/architecture/: complex-preferences.md  matching-algorithms.md  semantic-matching.md
docs/examples/: complex-type-configurations.sql  nodejs-streaming-client.js  request-examples.md
docs/integration/: main-app-semantic.md  nodejs-preference-processing.md
docs/setup/: mapbox-integration.md
examples/: time_string_format_example.json
src/matchmaker/: __init__.py  main.py
src/matchmaker/api/: __init__.py
src/matchmaker/api/middleware/: __init__.py  logging.py
src/matchmaker/api/routes/: matches.py  preferences.py  semantic.py  streaming.py
src/matchmaker/data/: __init__.py
src/matchmaker/data/loaders/: __init__.py  progressive.py
src/matchmaker/database/: __init__.py  complex_queries.py  connection.py
src/matchmaker/graph/: __init__.py  builder.py  matcher.py  tigergraph_client.py
src/matchmaker/models/: base.py  complex_types.py  enhanced_base.py  requests.py  results.py
src/matchmaker/processing/: __init__.py  complex_processors.py  plugins.py
src/matchmaker/scoring/: __init__.py  composite_scorer.py  explainable_scorer.py
src/matchmaker/services/: complex_type_agent_registry.py  enhanced_matching.py  map_service.py  matching.py  semantic_matching.py
src/matchmaker/services/graph/: __init__.py  base.py  factory.py  neo4j_client.py  tigergraph_client.py
src/matchmaker/utils/: filters.py  logger.py
src/scheduler/: __init__.py  config.py  constraints.py  enhanced_solver.py  enhanced_solver_v2.py  logging_config.py  main.py  models.py  scheduler.py  solver.py  solver_v2.py
src/scheduler/api/: __init__.py  dependencies.py
src/scheduler/api/middleware/: __init__.py
src/scheduler/api/routes/: __init__.py  admin.py  health.py  schedule.py  validation.py
src/scheduler/core/: __init__.py  analyzer.py  cache.py  optimizer.py  validator.py
src/scheduler/schemas/: __init__.py  requests.py
src/scheduler/utils/: __init__.py  exceptions.py  helpers.py  performance.py  profiler.py  validators.py
tests/: README.md  test_edge_cases.py  test_integration.py  test_mapbox_integration.py  test_normal_cases.py  test_time_string_format.py
tests/data/: case_01_simple_recommendation.json  case_02_sibling_allocation.json  case_03_waitlist_priority.json  case_04_distance_filtering.json  case_05_capacity_constraints.json  case_06_age_mismatch.json  case_07_hours_mismatch.json  case_08_exclusion_preferences.json  case_09_no_available_capacity.json  case_10_custom_configuration.json  case_11_comprehensive_preferences_test.json  case_12_mixed_preferences_test.json  case_13_strict_requirements_test.json
tests/expected_outputs/: case_01_simple_recommendation_output.json  case_02_sibling_allocation_output.json  case_03_waitlist_priority_output.json  case_04_distance_filtering_output.json  case_05_capacity_constraints_output.json  case_06_age_mismatch_output.json  case_07_hours_mismatch_output.json  case_08_exclusion_preferences_output.json  case_09_no_available_capacity_output.json  case_10_custom_configuration_output.json  case_11_comprehensive_preferences_test_output.json  case_12_mixed_preferences_test_output.json  case_13_strict_requirements_test_output.json
